Bug 532976 - Do not use APIs deprecated in Java 9
* new Integer
* Object.finalize
* Class.getConstructor

Change-Id: I95ef6f31b307bfaa33a6da80109611f6205e819a
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>