@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -321,7 +321,7 @@ public final class BaseHelpSystem {
 
 		try {
 			Class<?> c = bundle.loadClass(className);
-			Object o = c.newInstance();
+			Object o = c.getDeclaredConstructor().newInstance();
 			//Runnable runnable = null;
 			if (o != null && o instanceof ILiveHelpAction) {
 				ILiveHelpAction helpExt = (ILiveHelpAction) o;
