@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2002, 2017 IBM Corporation and others.
+ * Copyright (c) 2002, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -173,7 +173,7 @@ public class CheatSheetElement extends WorkbenchAdapter implements IAdaptable, I
 		}
 		try {
 			if (extClass != null) {
-				listener = (CheatSheetListener) extClass.newInstance();
+				listener = (CheatSheetListener) extClass.getDeclaredConstructor().newInstance();
 			}
 		} catch (Exception e) {
 			String message = NLS.bind(Messages.ERROR_CREATING_CLASS, (new Object[] {listenerClass}));
