@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2017 IBM Corporation and others.
+ * Copyright (c) 2004, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -140,11 +140,11 @@ public class ModelLoaderUtil {
         if (!BundleUtil.bundleHasValidState(bundle))
             return null;
 
-        Class aClass;
+        Class<?> aClass;
         Object aObject;
         try {
             aClass = bundle.loadClass(className);
-            aObject = aClass.newInstance();
+            aObject = aClass.getDeclaredConstructor().newInstance();
             return aObject;
         } catch (Exception e) {
             Log.error("Intro Could not instantiate: " + className + " in " //$NON-NLS-1$ //$NON-NLS-2$
